<resources>
    <string name="app_name">MVI Demo</string>
    <string name="action_settings">Settings</string>

    <string name="transaction_fragment_label">Create Transaction</string>
    <string name="home_fragment_label">Home</string>
    <string name="confirm_fragment_label">Confirm Transaction</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="limit">Limit</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="until_further_notice">Until further notice</string>

    <string name="select_service">Select Service</string>
    <string name="select_account">Select Account</string>
    <string name="confirm_transaction">Confirm transaction</string>
    <string name="confirm">Confirm</string>
    <string name="select_payment_day">Select payment day</string>
    <string name="choose_transaction_date">Choose transaction date</string>
    <string name="select_start_date">Select start date</string>
    <string name="automatic_date">Select date will be automatic</string>
    <string name="create_transaction_someone_else">Create transaction to someone else</string>
    <string name="create_transaction_own_account">Create transaction - To own account</string>
    <string name="transferToSomeoneElse">Transfer To Someone Else</string>
    <string name="transferToOwnAccount">Transfer To Own Account</string>

    <string name="transaction_details_template">Type: %1$s \n Service: %2$d \n Account: %3$d \n Date: %4$s \n Limit: %5$d </string>


    <string name="transaction_details">transaction details</string>
    <string-array name="account_array">
        <item>Savings</item>
        <item>Loan</item>
        <item>Current</item>
    </string-array>
    <string-array name="service_array">
        <item>Silknet</item>
        <item>Magti</item>
        <item>Telasi</item>
    </string-array>

    <string-array name="week_days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


</resources>